--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -68,6 +69,26 @@ dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.27.0"
     implementation "androidx.appcompat:appcompat:1.5.1"
     implementation 'com.google.android.material:material:1.7.0'
+
+
+    // Import the BOM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:31.1.0')
+
+    // authentication
+    implementation 'com.google.firebase:firebase-auth-ktx'
+
+    // firestore
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+
+    //coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
+
+    // navigation
+    implementation ('androidx.navigation:navigation-compose:2.5.3'){
+        transitive(true)
+    }
+// DI
+    implementation 'javax.inject:javax.inject:1'
 
 
 
