--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,10 @@ buildscript {
     ext {
         compose_ui_version = '1.1.1'
     }
+
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.14'
+    }
 }// Top-l
 
 // evel build file where you can add configuration options common to all sub-projects/modules.
