--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,8 @@ dependencies {
 // DI
     implementation 'javax.inject:javax.inject:1'
 
+    implementation 'androidx.core:core-splashscreen:1.0.0'
+
 
 
 
